samples/_failures_safe/1761390791_7560db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8974e1af.c: In function ‘main’:
./samples/SAFE/__tmp_8974e1af.c:143:5: error: expected expression at end of input
  143 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_8974e1af.c:143:5: error: expected declaration or statement at end of input
